# ascendc-optim-agent

./: README.md
.claude/: CLAUDE.md  settings.json
log/Cummin/round_001/: CMakeLists.txt  strategy.md
log/Cummin/round_001/msprof/shape_0/: ArithmeticUtilization.csv  L2Cache.csv  Memory.csv  MemoryL0.csv  MemoryUB.csv  OpBasicInfo.csv  PipeUtilization.csv  ResourceConflictRatio.csv  summary.txt
log/Cummin/round_001/msprof/shape_1/: ArithmeticUtilization.csv  L2Cache.csv  Memory.csv  MemoryL0.csv  MemoryUB.csv  OpBasicInfo.csv  PipeUtilization.csv  ResourceConflictRatio.csv  summary.txt
log/Cummin/round_001/msprof/shape_2/: L2Cache.csv  MemoryL0.csv  MemoryUB.csv  OpBasicInfo.csv  PipeUtilization.csv  ResourceConflictRatio.csv  summary.txt
log/Cummin/round_001/msprof_output/OPPROF_20260522153002_VOLKCJSNUQUHBFUS/: ArithmeticUtilization.csv  Memory.csv
log/Cummin/round_001/op_kernel/: Cummin_kernel.asc
operaters/Addr/: CMakeLists.txt  DESIGN.md  PLAN.md  reset_and_run  reset_and_run.cpp  reset_device  reset_device.cpp  run.sh  run_test.sh  test_device  test_device.cpp  test_device2  test_host_gv.cpp  test_kernel_gv.asc  test_kernel_nogv.asc
operaters/Addr/docs/perf/round_001/: ArithmeticUtilization.csv  L2Cache.csv  Memory.csv  MemoryL0.csv  MemoryUB.csv  OpBasicInfo.csv  PipeUtilization.csv  ResourceConflictRatio.csv  summary.txt
operaters/Addr/docs/perf/round_002/: ArithmeticUtilization.csv  L2Cache.csv  Memory.csv  MemoryL0.csv  MemoryUB.csv  OpBasicInfo.csv  PipeUtilization.csv  ResourceConflictRatio.csv  summary.txt
operaters/Addr/op_host/: Addr.asc
operaters/Addr/op_kernel/: Addr_kernel.asc  Addr_tiling.h
operaters/Addr/scripts/: gen_data.py  golden.py  mare_mere_threshold.py  verify_result.py
operaters/Complex/: CMakeLists.txt  run.sh
operaters/Complex/docs/: DESIGN.md  PLAN.md  REVIEW.md
operaters/Complex/docs/perf/round_001/: ArithmeticUtilization.csv  L2Cache.csv  Memory.csv  MemoryL0.csv  MemoryUB.csv  OpBasicInfo.csv  PipeUtilization.csv  ResourceConflictRatio.csv  summary.txt
operaters/Complex/op_host/: Complex.asc  data_utils.h
operaters/Complex/op_kernel/: Complex_kernel.asc  Complex_tiling.h
operaters/Complex/scripts/: gen_data.py  golden.py  verify_result.py
operaters/Cumsum/: CMakeLists.txt  DESIGN.md  PLAN.md  REVIEW.md  run.sh
operaters/Cumsum/docs/perf/round_001/: ArithmeticUtilization.csv  L2Cache.csv  Memory.csv  MemoryL0.csv  MemoryUB.csv  OpBasicInfo.csv  PipeUtilization.csv  ResourceConflictRatio.csv  summary.txt
operaters/Cumsum/docs/perf/round_002/: ArithmeticUtilization.csv  L2Cache.csv  Memory.csv  MemoryL0.csv  MemoryUB.csv  OpBasicInfo.csv  PipeUtilization.csv  ResourceConflictRatio.csv  summary.txt
operaters/Cumsum/op_host/: Cumsum.asc
operaters/Cumsum/op_kernel/: Cumsum_kernel.asc  Cumsum_tiling.h
operaters/Cumsum/scripts/: gen_data.py  golden.py  verify_result.py
operaters/DiagPart/: CMakeLists.txt  DESIGN.md  REVIEW.md  run.sh
operaters/DiagPart/docs/perf/round_001/: ArithmeticUtilization.csv  L2Cache.csv  Memory.csv  MemoryL0.csv  MemoryUB.csv  OpBasicInfo.csv  PipeUtilization.csv  ResourceConflictRatio.csv  summary.txt
operaters/DiagPart/docs/perf/round_002/: ArithmeticUtilization.csv  L2Cache.csv  Memory.csv  MemoryL0.csv  MemoryUB.csv  OpBasicInfo.csv  PipeUtilization.csv  ResourceConflictRatio.csv  summary.txt
operaters/DiagPart/op_host/: DiagPart.asc
operaters/DiagPart/op_kernel/: DiagPart_kernel.asc  DiagPart_tiling.h
operaters/DiagPart/scripts/: gen_data.py  golden.py  verify_result.py
(+242 files in other folders)
